--- a/Xam.Ref.Dal.SqLite/packages.config
+++ b/Xam.Ref.Dal.SqLite/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="sqlite-net" version="1.0.8" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
