--- a/Xam.Ref.Infra/Xam.Ref.Infra.csproj
+++ b/Xam.Ref.Infra/Xam.Ref.Infra.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Interfaces\IViewModel.cs" />
     <Compile Include="Ioc\IocContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\Logging.cs" />
+    <Compile Include="Util\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
