--- a/Xam.Ref/Xam.Ref.Droid/Xam.Ref.Droid.csproj
+++ b/Xam.Ref/Xam.Ref.Droid/Xam.Ref.Droid.csproj
@@ -55,6 +55,14 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="SQLite-net, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLitePCL.raw, Version=0.7.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLitePCL.raw_basic.0.7.1\lib\MonoAndroid\SQLitePCL.raw.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -77,13 +85,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\SqliteConnection.cs" />
+    <Compile Include="Helpers\SqliteConnectionAndroid.cs" />
     <Compile Include="Helpers\UserDialogAndroid.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLite.cs" />
-    <Compile Include="SQLiteAsync.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -105,8 +111,8 @@
       <Project>{38e83a72-05a8-4e7f-acd2-dc27d1c4bdbf}</Project>
       <Name>Xam.Ref.Infra</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Xam.Ref\Xam.Ref.View.csproj">
-      <Name>Xam.Ref.View</Name>
+    <ProjectReference Include="..\Xam.Ref\Xam.Ref.UI.csproj">
+      <Name>Xam.Ref.UI</Name>
       <Project>{3D6CEFF2-EFB5-4C57-90F4-0374C5D41D77}</Project>
     </ProjectReference>
   </ItemGroup>
