--- a/Xam.Ref/Xam.Ref.iOS/Xam.Ref.iOS.csproj
+++ b/Xam.Ref/Xam.Ref.iOS/Xam.Ref.iOS.csproj
@@ -92,8 +92,6 @@
     <Compile Include="Helpers\SqliteConnectionIos.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="SQLite.cs" />
-    <Compile Include="SQLiteAsync.cs" />
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
@@ -111,8 +109,8 @@
       <Project>{38e83a72-05a8-4e7f-acd2-dc27d1c4bdbf}</Project>
       <Name>Xam.Ref.Infra</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Xam.Ref\Xam.Ref.View.csproj">
-      <Name>Xam.Ref.View</Name>
+    <ProjectReference Include="..\Xam.Ref\Xam.Ref.UI.csproj">
+      <Name>Xam.Ref.UI</Name>
       <Project>{3D6CEFF2-EFB5-4C57-90F4-0374C5D41D77}</Project>
     </ProjectReference>
   </ItemGroup>
@@ -135,6 +133,14 @@
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="SQLite-net, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLitePCL.raw, Version=0.7.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLitePCL.raw_basic.0.7.1\lib\Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
