--- a/Xam.Ref/Xam.Ref/Xam.Ref.UI.csproj
+++ b/Xam.Ref/Xam.Ref/Xam.Ref.UI.csproj
@@ -42,8 +42,6 @@
     <Compile Include="Helpers\IPageLocator.cs" />
     <Compile Include="Helpers\Navigator.cs" />
     <Compile Include="Helpers\PageLocator.cs" />
-    <Compile Include="SQLite.cs" />
-    <Compile Include="SQLiteAsync.cs" />
     <Compile Include="View\BaseView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\LoginView.cs" />
@@ -53,6 +51,14 @@
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Autofac.3.5.2\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite-net, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLitePCL.raw, Version=0.7.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLitePCL.raw_basic.0.7.1\lib\portable-net45+netcore45+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -79,6 +85,14 @@
     <ProjectReference Include="..\..\Xam.Ref.Infra\Xam.Ref.Infra.csproj">
       <Project>{38e83a72-05a8-4e7f-acd2-dc27d1c4bdbf}</Project>
       <Name>Xam.Ref.Infra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Xam.Ref.Models\Xam.Ref.Models.csproj">
+      <Project>{c13dfa78-b392-4044-ad42-d1eb8ad2b310}</Project>
+      <Name>Xam.Ref.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Xam.Ref.ViewModel\Xam.Ref.ViewModel.csproj">
+      <Project>{df7c07b3-e031-49ae-9ca8-d751ed94d5a1}</Project>
+      <Name>Xam.Ref.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
